# raspberry_pico_test_0

./: CMakeLists.txt  Makefile  auto  main.c  main.pio  other.c  readme.md
archive/: hello_world.c
